--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@trycourier/courier": "^6.3.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.3",
-    "nodemailer": "^6.9.16"
+    "mongoose": "^8.7.3"
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
